# people_detection

./: .hgignore  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml  trainedLinearSVMForPeopleDetectionWithHOG.yaml
action/: PausePeopleDetection.action  ReInitTracking.action
include/: PeopleDetector.h  PeopleTracker.h
launch/: people_detect.launch  people_detection.launch
msg/: PersonObject.msg  PersonObjectArray.msg
sandbox/: data1people1.txt  data1people2.txt  data2people1.txt  people_detect_visualization.cpp  tracktester.cpp
src/: PeopleDetector.cpp  PeopleTracker.cpp  foot_detection.cpp  main_ground_based_people_detection.cpp  multi_people_detection.cpp  multi_people_detection_gesture.cpp  people.cpp  people.h  people_detection(original).cpp  people_detection.cpp  people_detection_2013.cpp  people_detection_modify.cpp  people_detection_node.cpp  people_detection_node_2015.cpp  people_detection_node_pcl172.cpp  people_detection_node_temp.cpp  people_detection_res.cpp  people_detection_ros_v1.cpp  people_detection_visualization.cpp  test_people.cpp
